# Cube_Tracker

./: CMakeLists.txt  LICENSE  README.md
include/: App.h  Bounding_box_model.h  Upper_center_model.h  Video_Manager.h  Video_Processor.h  app.h  utils.h
src/: App.cpp  Bounding_box_model.cpp  Upper_center_model.cpp  Video_Manager.cpp  Video_Processor.cpp  app.cpp  main.cpp
